2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve assignment.

2019-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Improve notUsed() precision, alternative to patch from z88dk fork.
	* src/stm8/*.def:
	  Add rule from patch #304.
	* src/z80/gen.c:
	  Improve load of hl.

2019-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  stm8 peephole optimization improvements, mostly picked from patch #290.
	* sdas/asxxsrc/asmcro.c:
	  Improve sdas behaviour on internal error, patch from bug #2626.
	* src/z80/peep.c:
	  Pick some peephole optimization improvements from z88dk fork.

2019-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13mch.c:
	  Bit instruction fixes by Free-PDK.
	* device/lib/pdk13/__gptrget.s:
	  Pointer read fix as suggested by Serge Rabyking (see patch #305).

2019-07-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Small improvements in handling of wide values.

2019-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve aop moves (in particular wrt. 16-bit ld).

2019-07-11 Philipp Klaus Krause <pkk AT spth.de>

	* .version:
	  Reflect recent progress on pdk13 by bumping the version number.

2019-07-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sim/ucsim/pdk.src/inst.cc,
	  sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c,
	  src/pdk/main.c,
	  src/pdk/gen.c:
	  Remove cneqsn for pdk13 fixing bug #2923.

2019-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/preserves_regs.c:
	  Improve handling of iy, should fix bug #2918.

2019-06-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/ralloc.c,
	  src/hc08/ralloc.c,
	  src/mcs51/ralloc.c,
	  src/ds390/ralloc.c,
	  src/stm8/ralloc.c,
	  src/pdk/ralloc.c,
	  src/pic14/ralloc.c,
	  src/pic16/ralloc.c: fix bug #2920
	* src/hc08/gen.c: fix bug with negative array index
